# ai-helpdesk-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
backend/: pyproject.toml
backend/app/: cli.py  context.py  create_user.py  dependencies.py  main.py  seed.py
backend/app/agent/: analyzer.py  llm.py  pipeline.py  prompts.py  responder.py  router.py
backend/app/auth/: security.py
backend/app/channels/: base.py  mock.py  telegram.py  zendesk.py  zendesk_poller.py
backend/app/config/: db.py  logger.py  settings.py
backend/app/knowledge/: retriever.py
backend/app/knowledge/faq/: api-getting-started.md  company-info.md  delivery-reports.md  sender-id.md  sending-campaigns.md  topup-billing.md
backend/app/models/: __init__.py  app_setting.py  enums.py  message.py  ticket.py  user.py
backend/app/repositories/: message_repository.py  settings_repository.py  ticket_repository.py  user_repository.py
backend/app/routers/: api.py
backend/app/routers/routes/: analytics.py  auth.py  settings.py  simulate.py  support.py  tickets.py  ws.py
backend/app/schemas/: analytics.py  auth.py  message.py  settings.py  simulate.py  support.py  ticket.py
backend/app/services/: analytics_service.py  conversation_service.py  escalation_service.py  settings_service.py  ticket_service.py
backend/app/utils/: exceptions.py  model.py  repository.py  time.py  websocket_manager.py
backend/tests/: conftest.py  test_analytics_service.py  test_auth.py  test_conversation_service.py  test_responder.py  test_retriever.py  test_router.py  test_settings_service.py  test_support_route.py  test_ticket_repository.py  test_ticket_service.py  test_zendesk_poller.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  index.css  types.ts
frontend/src/components/: Badge.tsx  ChatWindow.tsx  Layout.tsx  StatCard.tsx  SupportWidget.tsx  TicketTable.tsx
(+11 files in other folders)
