[project]
name = "ai-helpdesk-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "greenlet>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi-pagination>=0.12.34",
    "loguru>=0.7",
    "openai>=1.54",
    "aiogram>=3.13",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
