[project]
name = "ai-helpdesk-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "greenlet>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi-pagination>=0.12.34",
    "loguru>=0.7",
    "openai>=1.54",
    "aiogram>=3.13",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# Files holding human-facing content strings where length is dictated by the text itself.
"app/agent/prompts.py" = ["E501"]
"app/agent/responder.py" = ["E501"]
"app/config/logger.py" = ["E501"]
"app/seed.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
